[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = ""
authors = ["vladimir_k"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "3.9.5"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
